@@ -1,5 +1,8 @@
 #! /bin/sh
 
+# Copyright (C) 2010-2012 Peter Breitenlohner <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
+
 test_src=$srcdir/$DVI2TTY_TREE/test
 
 unset DVI2TTY	# nullify dvi2tty options (if any)
